--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     }
 
     body {
-        @apply bg-white dark:bg-black text-black dark:text-white;
+        @apply bg-white text-black dark:bg-black dark:text-white;
     }
 }
 
